--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "extends": ["eslint:recommended", "prettier", "plugin:react/recommended"],
   "parserOptions": {
     "ecmaVersion": 11,
     "sourceType": "module"
@@ -11,7 +11,7 @@
   "plugins": [
     "react",
     "react-hooks",
-    "prettier-eslint",
+    "prettier",
     "eslint-plugin-import-helpers"
   ],
   "rules": {
